# class-imbalance-sgd-adam

./: .gitignore  README.md
code/: README.md  make_all_plots.sh  pyproject.toml  setup.cfg
code/envs/: env.bat  env.sh  readme.md
code/requirements/: dev.txt  docs.txt  main.txt  readme.md  torch.txt
code/scripts/: plot_frequency_statistics.py  plot_legends.py  plot_modified_mnist.py  plot_zipf_tokens.py
code/scripts/grad_vs_hessian/: README.md  main.py  probs_over_time.py  subset_hessian.py
code/src/optexp/: __init__.py  utils.py
code/src/optexp/config/: __init__.py
code/src/optexp/datasets/: __init__.py  barcoded_mnist.py  classification_mixture.py  coloured_mnist.py  dataset.py  dataset_downloader.py  dataset_getter.py  frozen_dataset.py  image_dataset.py  synthetic_dataset.py  text_dataset.py
code/src/optexp/experiments/: __main__.py  appendix_figures.py  big_experiments.py  experiment.py  lightning_experiment.py  paper_figures.py
code/src/optexp/loggers/: __init__.py  asdict_with_classes.py  data_logger.py  rate_limited_logger.py  utils.py
code/src/optexp/models/: __init__.py  cnn.py  initializer.py  linear.py  mlp.py  model.py  transformer_encoder.py
code/src/optexp/optimizers/: AdaGrad.py  Adam.py  AdamW.py  LineSGD.py  SGD.py  __init__.py  learning_rate.py  normalized_opts.py  optimizer.py
code/src/optexp/plotter/: __init__.py  best_run_plotter.py  caching_helper.py  data_utils.py  grid_plotter.py  names_and_consts.py  param_plotter.py  plot_per_class.py  plot_utils.py  style_figure.py  style_lines.py
code/src/optexp/problems/: __init__.py  (+6 more)
(+59 files in other folders)
