[metadata]
name = optexp
version = 0.0.1
authors =  Robin Yadav, Frederik Kunstner, Alan Milligan
author_email = robin.yadav798@gmail.com, frederik.kunstner@gmail.org, alanmil@cs.ubc.ca<
description = Adam vs SGD experiments
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/ml568/summer2023.git
project_urls =
    Bug Tracker = https://github.com/ml568/summer2023/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = E501